get started page on main and new layout for tools

--- a/aegis-web/yo/app/styles/form.css
+++ b/aegis-web/yo/app/styles/form.css
@@ -137,11 +137,6 @@ textarea.form-control {
   right: 0;
 }
 
-.form-control:focus {
-    box-shadow: none;
-    border-color: rgb(102,102,102);
-}
-
 .text-danger {
   color: #f05050;
 }
@@ -223,5 +218,5 @@ textarea.form-control {
 }
 
 .dark::placeholder {
-  color: rgb(102, 102, 102) !important;
+  color: #fff !important;
 }
