Properly edited the jupyter tools controller , Created new getStarted page and fixed the routing in app.js

--- a/aegis-web/yo/app/views/jupyterDashboard.html
+++ b/aegis-web/yo/app/views/jupyterDashboard.html
@@ -126,7 +126,7 @@
                   Start Aegis Jupyter Tools
                 </button>
                 <input type="checkbox" ng-model="jupyterCtrl.advanced" id="toggle-setup-checkbox" style="display: none">
-                <label id="jupyter-settings-access" for="toggle-setup-checkbox" onclick="scrollAdvancedSettings()">
+                <label id="jupyter-settings-access" for="toggle-setup-checkbox" ng-click="scrollAdvancedSettings()">
                   <b>Settings </b> <span class="sub_icon fa fa-cog fa-lg" style="width: 30px; display: inline-block; margin-left: 10px"></span>
                 </label>
                 
