--- a/aegis-web/yo/app/styles/get-started.css
+++ b/aegis-web/yo/app/styles/get-started.css
@@ -1,16 +1,38 @@
+.wiki-navigation{
+    position: absolute;
+    left: 30px;
+    width: 20%;
+    border-right: 5px solid grey;
+}
+
 .wiki-ToC{
     position: fixed;
     right: 30px;
     top: 120px;
     width: 20%;
     border-left: 5px solid #0492b3;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 100%;
 }
 
 .wiki-main{
     width: 50%;
     margin-left: 25%;
+}
+
+.sidebar-selected{
+    background-color:  #0492b3;
+    color: white;
+}
+
+.sidebar-header-0{
+    margin-left: 5px;
+    font-size: 110%;
+    margin-bottom: 5px;
+}
+
+.sidebar-header-1 { 
+    margin-left: 5px;
 }
 
 .sidebar-header-2 { 
