Minor color correction

--- a/aegis-web/yo/app/styles/get-started.css
+++ b/aegis-web/yo/app/styles/get-started.css
@@ -25,6 +25,10 @@
     color: white;
 }
 
+.sidebar-selected:hover{
+    color: white;
+}
+
 .sidebar-header-0{
     margin-left: 5px;
     font-size: 110%;
