--- a/aegis-web/yo/app/views/getStarted.html
+++ b/aegis-web/yo/app/views/getStarted.html
@@ -11,7 +11,7 @@
       <div class="span3">
         <ul class="nav nav-list wiki-navigation">
             <li class="sidebar-header-0">Aegis Wiki Navigation</li>
-            <li class="sidebar-header-1 sidebar-selected"><a href="/#!/getStarted">Get Started</a></li>
+            <li class="sidebar-header-1"><a href="/#!/getStarted" class="sidebar-selected">Get Started</a></li>
             <li class="sidebar-header-0">External Links</li>
             <li class="sidebar-header-1">Github</li>
             <li class="sidebar-header-2"><a href="https://github.com/aegisbigdata/documentation/wiki/Query-Builder">Query Builder Documentation</a></li>
