Fixed bug at getStarted table of cotnents, manually set the local links, to properly fix this the base tag should be removed, but it isn't known if it needed somewhere else, if it isn't you can revert this change

--- a/aegis-web/yo/app/views/getStarted.html
+++ b/aegis-web/yo/app/views/getStarted.html
@@ -21,10 +21,10 @@
         </ul>
         <ul class="nav nav-list wiki-ToC">
             <li class="sidebar-header-0">Table of Contents</li>
-            <li class="sidebar-header-1"><a href="getStarted/#a.-quick-introduction-to-the-aegis-tools">A. Quick Introduction to the AEGIS tools</a></li>
-            <li class="sidebar-header-1"><a href="#b.-getting-started-workflow">B. Getting started workflow</a></li>
-            <li class="sidebar-header-2"><a href="#part-1---first-visit-step-by-step">Part 1 - First visit step by step</a></li>
-            <li class="sidebar-header-2"><a href="#part-2---advanced-options">Part 2 - Advanced options</a></li>
+            <li class="sidebar-header-1"><a href="/#!/getStarted#a.-quick-introduction-to-the-aegis-tools" target="_self">A. Quick Introduction to the AEGIS tools</a></li>
+            <li class="sidebar-header-1"><a href="/#!/getStarted#b.-getting-started-workflow">B. Getting started workflow</a></li>
+            <li class="sidebar-header-2"><a href="/#!/getStarted#part-1---first-visit-step-by-step">Part 1 - First visit step by step</a></li>
+            <li class="sidebar-header-2"><a href="/#!/getStarted#part-2---advanced-options">Part 2 - Advanced options</a></li>
         </ul>
       </div>
       <div class="span9 wiki-main"><h1 id="a.-quick-introduction-to-the-aegis-tools"><a class="header-link" href="#a.-quick-introduction-to-the-aegis-tools"></a>A. Quick Introduction to the AEGIS tools</h1>
