Added proper links to jupyter tool, cards

--- a/aegis-web/yo/app/views/jupyterDashboard.html
+++ b/aegis-web/yo/app/views/jupyterDashboard.html
@@ -66,9 +66,9 @@
                   2.Select "query.np"
                   <br/>
                 </div>
-                <a class="card-tool-bottom-link">Documentation  <div class="card-tool-bottom-link-morethan">></div></a>
+                <a class="card-tool-bottom-link" href="https://github.com/aegisbigdata/documentation/wiki/Query-Builder">Documentation  <div class="card-tool-bottom-link-morethan">></div></a>
                 <br/>
-                <a class="card-tool-bottom-link">Github  <div class="card-tool-bottom-link-morethan">></div></a>
+                <a class="card-tool-bottom-link" href="https://github.com/aegisbigdata/query-builder">Github  <div class="card-tool-bottom-link-morethan">></div></a>
               </div>
         </div>
 
@@ -85,9 +85,9 @@
               2.Select "visualiser.np"
               <br/>
             </div>
-            <a class="card-tool-bottom-link">Documentation  <div class="card-tool-bottom-link-morethan">></div></a>
+            <a class="card-tool-bottom-link" href="https://github.com/aegisbigdata/documentation/wiki/Visualizer">Documentation  <div class="card-tool-bottom-link-morethan">></div></a>
             <br/>
-            <a class="card-tool-bottom-link">Github <div class="card-tool-bottom-link-morethan">></div> </a>
+            <a class="card-tool-bottom-link" href="https://github.com/aegisbigdata/visualizer">Github <div class="card-tool-bottom-link-morethan">></div> </a>
             
           </div>
     </div>
@@ -105,9 +105,9 @@
           2.Select "aec.np"
           <br/>
         </div>
-        <a class="card-tool-bottom-link">Documentation  <div class="card-tool-bottom-link-morethan">></div></a>
+        <a class="card-tool-bottom-link" href="https://github.com/aegisbigdata/documentation/wiki/Algorithm-Execution-Container">Documentation  <div class="card-tool-bottom-link-morethan">></div></a>
         <br/>
-        <a class="card-tool-bottom-link">Github  <div class="card-tool-bottom-link-morethan">></div></a>
+        <a class="card-tool-bottom-link" href="https://github.com/aegisbigdata/AlgorithmContainer">Github  <div class="card-tool-bottom-link-morethan">></div></a>
       </div>
     </div>  
         
