--- a/aegis-web/yo/app/views/getStarted.html
+++ b/aegis-web/yo/app/views/getStarted.html
@@ -14,9 +14,9 @@
             <li class="sidebar-header-1"><a href="/#!/getStarted" class="sidebar-selected">Get Started</a></li>
             <li class="sidebar-header-0">External Links</li>
             <li class="sidebar-header-1">Github</li>
-            <li class="sidebar-header-2"><a href="https://github.com/aegisbigdata/documentation/wiki/Query-Builder">Query Builder Documentation</a></li>
-            <li class="sidebar-header-2"><a href="https://github.com/aegisbigdata/documentation/wiki/Visualizer">Visualiser Documentation</a></li>
-            <li class="sidebar-header-2"><a href="https://github.com/aegisbigdata/documentation/wiki/Algorithm-Execution-Container">Algorithm-Execution-Container Documentation</a></li>
+            <li class="sidebar-header-2"><a href="https://github.com/aegisbigdata/documentation/wiki/Query-Builder" target="_blank">Query Builder Documentation</a></li>
+            <li class="sidebar-header-2"><a href="https://github.com/aegisbigdata/documentation/wiki/Visualizer" target="_blank">Visualiser Documentation</a></li>
+            <li class="sidebar-header-2"><a href="https://github.com/aegisbigdata/documentation/wiki/Algorithm-Execution-Container" target="_blank">Algorithm-Execution-Container Documentation</a></li>
 
         </ul>
         <ul class="nav nav-list wiki-ToC">
